# crcforge

./: .gitignore  README.md  crcforge.py  endiannes.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/crcforge/: algorithms.py  cli.py  io.py
tests/: test_algorithms.py  test_byteorder.py  test_cli.py
